修改 端口数据。

--- a/web/templates/common/left_menu.html
+++ b/web/templates/common/left_menu.html
@@ -47,7 +47,7 @@
             <a href="#" class="dropdown-toggle">
                 <i class="menu-icon fa fa-desktop"></i>
                 <span class="menu-text">
-                    UI &amp; Elements
+                    股票原始数据
                 </span>
                 <b class="arrow fa fa-angle-down"></b>
             </a>
@@ -56,25 +56,20 @@
                 <li class="">
                     <a href="#" class="dropdown-toggle">
                         <i class="menu-icon fa fa-caret-right"></i>
-                        Layouts
+                        宏观经济数据
                         <b class="arrow fa fa-angle-down"></b>
                     </a>
                     <b class="arrow"></b>
                     <ul class="submenu">
+
                         <li class="">
-                            <a href="top-menu.html">
+                            <a href="/stock/data?name=ts_deposit_rate">
                                 <i class="menu-icon fa fa-caret-right"></i>
-                                Top Menu
+                                存款利率
                             </a>
                             <b class="arrow"></b>
                         </li>
-                        <li class="">
-                            <a href="two-menu-1.html">
-                                <i class="menu-icon fa fa-caret-right"></i>
-                                Two Menus 1
-                            </a>
-                            <b class="arrow"></b>
-                        </li>
+
                     </ul>
                 </li>
             </ul>
