--- a/web/templates/common/meta.html
+++ b/web/templates/common/meta.html
@@ -28,5 +28,22 @@
 		<script src="/static/js/buttons.colVis.min.js"></script>
 		<script src="/static/js/buttons.print.min.js"></script>
 		<script src="/static/js/buttons.html5.min.js"></script>
-
+<script type='text/javascript'>
+$.extend({
+	getUrlVars: function(){
+		var vars = [], hash;
+		var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
+		for(var i = 0; i < hashes.length; i++)
+		{
+			hash = hashes[i].split('=');
+			vars.push(hash[0]);
+			vars[hash[0]] = hash[1];
+		}
+		return vars;
+	},
+	getUrlVar: function(name){
+		return $.getUrlVars()[name];
+	}
+});
+</script>
 {% end %}
