--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -3,73 +3,9 @@
 
 {% block main_content %}
 
-	<h3 class="header smaller lighter blue">jQuery dataTables</h3>
+	<h3 class="header smaller lighter blue">欢迎使用股票系统。</h3>
 
 	<div class="clearfix">
 		<div class="pull-right tableTools-container"></div>
 	</div>
-	<div class="table-header">&nbsp;</div>
-
-	<!-- div.table-responsive -->
-
-	<!-- div.dataTables_borderWrap -->
-	<div>
-		<table id="dynamic-table" class="table table-striped table-bordered table-hover">
-			<thead>
-				<tr>
-					<th>Domain</th>
-					<th>Domain</th>
-					<th>Price</th>
-					<th class="hidden-480">Clicks</th>
-					<th>
-						<i class="ace-icon fa fa-clock-o bigger-110 hidden-480"></i>
-						Update
-					</th>
-					<th class="hidden-480">Status</th>
-				</tr>
-			</thead>
-		</table>
-	</div>
-
-<!-- inline scripts related to this page -->
-<script type="text/javascript">
-	jQuery(function($) {
-		var myTable = $('#dynamic-table').DataTable( {
-			"bFilter": false,
-			"ordering": false,
-			"processing": true,
-			"serverSide": true,
-			"language": {
-                "url": "/static/js/datatables.Chinese.json"
-            },
-			"ajax": "/api/stock/get_data"
-		} );
-
-		$.fn.dataTable.Buttons.defaults.dom.container.className = 'dt-buttons btn-overlap btn-group btn-overlap';
-
-		new $.fn.dataTable.Buttons( myTable, {
-			buttons: [
-			  {
-				"extend": "copy",
-				"text": "<i class='fa fa-copy bigger-110 pink'></i> <span class='hidden'>Copy to clipboard</span>",
-				"className": "btn btn-white btn-primary btn-bold"
-			  },
-			  {
-				"extend": "csv",
-				"text": "<i class='fa fa-database bigger-110 orange'></i> <span class='hidden'>Export to CSV</span>",
-				"className": "btn btn-white btn-primary btn-bold"
-			  },
-			  {
-				"extend": "print",
-				"text": "<i class='fa fa-print bigger-110 grey'></i> <span class='hidden'>Print</span>",
-				"className": "btn btn-white btn-primary btn-bold",
-				autoPrint: false,
-				message: 'This print was produced using the Print button for DataTables'
-			  }
-			]
-		} );
-		myTable.buttons().container().appendTo( $('.tableTools-container') );
-
-	})
-</script>
 {% end %}
