--- a/web/templates/stock_web.html
+++ b/web/templates/stock_web.html
@@ -34,6 +34,7 @@
 			"ordering": false,
 			"processing": true,
 			"serverSide": true,
+			"lengthMenu": [[30, 50, 100,1000, -1], [30, 50, 100,1000, "All"]],
 			"language": {
                 "url": "/static/js/datatables.Chinese.json"
             },
