--- a/web/templates/stock_web.html
+++ b/web/templates/stock_web.html
@@ -31,7 +31,7 @@
 		console.log(nameParam);
 		var myTable = $('#dynamic-table').DataTable( {
 			"bFilter": false,
-			"ordering": false,
+			"ordering": true,
 			"processing": true,
 			"serverSide": true,
 			"lengthMenu": [[20, 30, 50, 100,1000, -1], [20, 30, 50, 100,1000, "All"]],
