--- a/web/templates/common/left_menu.html
+++ b/web/templates/common/left_menu.html
@@ -52,17 +52,17 @@
                 <b class="arrow fa fa-angle-down"></b>
             </a>
             <b class="arrow"></b>
-            <ul class="submenu">
-                <li class="active open">
-
+            <li class="submenu">
+                    <li class="open" style="display:none;">
                     {% set loopType = "" %}
                     {% for leftMenuTmp in leftMenu.leftMenuList %}
 
-                         {% if leftMenuTmp.type != loopType %}
-
+                        {% if leftMenuTmp.type != loopType %}
+                        </li>
+                        <li class="open">
                             {% set loopType = leftMenuTmp.type %}
                             <a href="#" class="dropdown-toggle">
-                                <i class="menu-icon fa fa-caret-right"></i>
+                                <i class="menu-icon fa fa-pencil-square-o"></i>
                                 {{ leftMenuTmp.type }}
                                 <b class="arrow fa fa-angle-down"></b>
                             </a>
@@ -79,9 +79,9 @@
                                 <b class="arrow"></b>
                             </li>
                         </ul>
-                    {% end %}
 
-                </li>
+                    {% end %}
+                        </li>
             </ul>
 
         </li>
