--- a/web/templates/stock_web.html
+++ b/web/templates/stock_web.html
@@ -22,7 +22,7 @@
 <script type="text/javascript">
 	jQuery(function($) {
 		var nameParam = $.getUrlVar('name');
-		console.log(nameParam);
+		//console.log(nameParam);
 		var myTable = $('#dynamic-table').DataTable( {
 			"bFilter": false,
 			"ordering": true,
