--- a/web/templates/stock_web.html
+++ b/web/templates/stock_web.html
@@ -8,6 +8,7 @@
 	<!-- div.table-responsive -->
 	<!-- div.dataTables_borderWrap -->
 	<div>
+		<div class="pull-right tableTools-container"></div>
 		<table id="dynamic-table" class="table table-striped table-bordered table-hover">
 			<thead>
 				<tr>{% for column_name in stockWeb.column_names %}
