--- a/web/templates/common/header.html
+++ b/web/templates/common/header.html
@@ -6,6 +6,29 @@
                 <small><i class="fa fa-leaf"></i>股票系统</small>
             </a>
         </div>
+
+        <div class="navbar-buttons navbar-header pull-right" role="navigation">
+            <ul class="nav ace-nav">
+                <li class="light-blue dropdown-modal">
+                    <a data-toggle="dropdown" href="#" class="dropdown-toggle">
+                        <small>欢迎登陆 </small>
+                        <i class="ace-icon fa fa-caret-down"></i>
+                    </a>
+                    <ul class="user-menu dropdown-menu-right dropdown-menu dropdown-yellow dropdown-caret dropdown-close">
+                        <li style="text-align: center;"><i class="ace-icon fa fa-cog"></i>设置</a></li>
+                        <li><a href="#"><i class="ace-icon fa fa-user"></i>个人信息</a></li>
+                        <li class="divider"></li>
+                        <li>
+                            <a href="javascript:userLogout();">
+                                <i class="ace-icon fa fa-power-off"></i>
+                                退出
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+
     </div><!-- /.navbar-container -->
 </div>
 {% end %}
