--- a/web/templates/stock_web.html
+++ b/web/templates/stock_web.html
@@ -6,16 +6,20 @@
 	<h3 class="header smaller lighter blue">{{ stockWeb.name }}</h3>
 	<div class="table-header">{{ stockWeb.name }}</div>
 
+	<div class="row">&nbsp;</div>
+	<div class="row">
+		{% for index,element in enumerate(stockWeb.columns) %}
+		<div class="col-md-4" id="filter_col{{ index+1 }}" data-column="{{ index }}">
+			{{ stockWeb.column_names[index] }} &nbsp;
+			<!-- Column - {{ stockWeb.column_names[index] }} - {{ element }} -->
+			<input type="text" class="column_filter input-group-sm form-control" id="col{{ index }}_filter">
+		</div>
+		{% end %}
+	</div>
 
 	<table cellpadding="3" cellspacing="0" border="0" style="width: 67%; margin: 0 auto 2em auto;">
 		<tbody>
-			{% for index,element in enumerate(stockWeb.columns) %}
-			<tr id="filter_col{{ index+1 }}" data-column="{{ index }}">
-				<td>{{ stockWeb.column_names[index] }}</td>
-				<!-- Column - {{ stockWeb.column_names[index] }} - {{ element }} -->
-				<td align="center"><input type="text" class="column_filter" id="col{{ index }}_filter"></td>
-			</tr>
-			{% end %}
+
 		</tbody>
 	</table>
 	<!-- div.table-responsive -->
@@ -57,8 +61,8 @@
 		} );
 
 		$('input.column_filter').on( 'keyup click', function () {
-			var i =  $(this).parents('tr').attr('data-column') ;
-			//console.log($(this).val());
+			var i =  $(this).parents('div').attr('data-column') ;
+			console.log(i,"val:",$(this).val());
 			myTable.column(i).search(
 				$(this).val()
 			).draw();
