--- a/web/templates/common/meta.html
+++ b/web/templates/common/meta.html
@@ -26,6 +26,11 @@
 		<script src="/static/js/buttons.colVis.min.js"></script>
 		<script src="/static/js/buttons.print.min.js"></script>
 		<script src="/static/js/buttons.html5.min.js"></script>
+
+
+		<link rel="stylesheet" href="/static/css/editor.dataTables.min.css" />
+		<script src="/static/js/dataTables.editor.min.js"></script>
+
 <script type='text/javascript'>
 $.extend({
 	getUrlVars: function(){
