--- a/web/templates/data_editor.html
+++ b/web/templates/data_editor.html
@@ -6,29 +6,15 @@
 	<h3 class="header smaller lighter blue">{{ stockWeb.name }}</h3>
 	<div class="table-header">{{ stockWeb.name }}</div>
 
-	<div class="row">&nbsp;</div>
-	<div class="row">
-		{% for index,element in enumerate(stockWeb.columns) %}
-		<div class="col-md-4" id="filter_col{{ index+1 }}" data-column="{{ index }}">
-			{{ stockWeb.column_names[index] }} &nbsp;
-			<!-- Column - {{ stockWeb.column_names[index] }} - {{ element }} -->
-			<input type="text" class="column_filter input-group-sm form-control" id="col{{ index }}_filter">
-		</div>
-		{% end %}
-	</div>
-
-	<table cellpadding="3" cellspacing="0" border="0" style="width: 67%; margin: 0 auto 2em auto;">
-		<tbody>
-
-		</tbody>
-	</table>
 	<!-- div.table-responsive -->
 	<!-- div.dataTables_borderWrap -->
 	<div>
 		<div class="pull-right tableTools-container"></div>
 		<table id="dynamic-table" class="table table-striped table-bordered table-hover">
 			<thead>
-				<tr>{% for column_name in stockWeb.column_names %}
+				<tr>
+					<th></th>
+					{% for column_name in stockWeb.column_names %}
 					<th>{{ column_name }}</th>
 				{% end %}
 				</tr>
@@ -41,9 +27,23 @@
 
 	jQuery(function($) {
 
+		editor = new $.fn.dataTable.Editor( {
+        ajax: "/data/editor/save",
+        table: "#dynamic-table",
+			fields: [
+				{% for index,element in enumerate(stockWeb.columns) %}
+				{
+					label: "{{ stockWeb.column_names[index] }}:",
+					name: "{{ element }}"
+					{% if element == "date" %} ,type: "datetime" {% end %}
+				},{% end %}
+			]
+		} );
+
 		var nameParam = $.getUrlVar('name');
 		//console.log(nameParam);
 		var myTable = $('#dynamic-table').DataTable( {
+			"dom": "Bfrtip",
 			"bFilter": true,
 			"ordering": true,
 			"processing": true,
@@ -54,44 +54,26 @@
             },
 			"ajax": "/stock/api_data?type=editor&name="+nameParam,
 			"columns": [
+				{
+					"data": "DT_RowId",
+					"defaultContent": "",
+					"className": 'select-checkbox',
+					"orderable": false
+				},
 				{% for column in stockWeb.columns %}
 					{ "data": "{{ column }}" },
 				{% end %}
-        	]
-		} );
-
-		$('input.column_filter').on( 'keyup click', function () {
-			var i =  $(this).parents('div').attr('data-column') ;
-			//console.log(i,"val:",$(this).val());
-			myTable.column(i).search(
-				$(this).val()
-			).draw();
-		});
-
-		$.fn.dataTable.Buttons.defaults.dom.container.className = 'dt-buttons btn-overlap btn-group btn-overlap';
-
-		new $.fn.dataTable.Buttons( myTable, {
-			buttons: [
-			  {
-				"extend": "copy",
-				"text": "<i class='fa fa-copy bigger-110 pink'></i> <span class='hidden'>Copy to clipboard</span>",
-				"className": "btn btn-white btn-primary btn-bold"
-			  },
-			  {
-				"extend": "csv",
-				"text": "<i class='fa fa-database bigger-110 orange'></i> <span class='hidden'>Export to CSV</span>",
-				"className": "btn btn-white btn-primary btn-bold"
-			  },
-			  {
-				"extend": "print",
-				"text": "<i class='fa fa-print bigger-110 grey'></i> <span class='hidden'>Print</span>",
-				"className": "btn btn-white btn-primary btn-bold",
-				autoPrint: false,
-				message: 'This print was produced using the Print button for DataTables'
-			  }
+        	],
+			select: {
+				style:    'os',
+				selector: 'td:first-child'
+			},
+        	buttons: [
+				{ extend: "create", editor: editor, text: '新增' },
+				{ extend: "edit",   editor: editor, text: '编辑' },
+				{ extend: "remove", editor: editor, text: '删除' }
 			]
 		} );
-		myTable.buttons().container().appendTo( $('.tableTools-container') );
 
 	})
 </script>
