--- a/web/templates/stock_web.html
+++ b/web/templates/stock_web.html
@@ -41,7 +41,7 @@
 
 	jQuery(function($) {
 
-		var nameParam = $.getUrlVar('name');
+		var nameParam = $.getUrlVar('table_name');
 		//console.log(nameParam);
 		var myTable = $('#dynamic-table').DataTable( {
 			"bFilter": true,
