--- a/web/templates/stock_web.html
+++ b/web/templates/stock_web.html
@@ -44,6 +44,7 @@
 		var nameParam = $.getUrlVar('table_name');
 		//console.log(nameParam);
 		var myTable = $('#dynamic-table').DataTable( {
+			"select": true,
 			"bFilter": true,
 			"ordering": true,
 			"processing": true,
