增加 股票 指标数据分析。

--- a/web/templates/common/left_menu.html
+++ b/web/templates/common/left_menu.html
@@ -44,14 +44,14 @@
         </li>
 
         <li class="active open">
-            <a href="#" class="dropdown-toggle">
-                <i class="menu-icon fa fa-desktop"></i>
-                <span class="menu-text">
-                    股票原始数据
-                </span>
-                <b class="arrow fa fa-angle-down"></b>
-            </a>
-            <b class="arrow"></b>
+            <!--<a href="#" class="dropdown-toggle">-->
+                <!--<i class="menu-icon fa fa-desktop"></i>-->
+                <!--<span class="menu-text">-->
+                    <!--股票原始数据-->
+                <!--</span>-->
+                <!--<b class="arrow fa fa-angle-down"></b>-->
+            <!--</a>-->
+            <!--<b class="arrow"></b>-->
             <li class="submenu">
                     <li class="open" style="display:none;">
                     {% set loopType = "" %}
