--- a/web/templates/common/meta.html
+++ b/web/templates/common/meta.html
@@ -30,7 +30,7 @@
 		<link rel="stylesheet" href="/static/css/editor.dataTables.min.css" />
 		<link rel="stylesheet" href="/static/css/buttons.dataTables.min.css" />
 		<link rel="stylesheet" href="/static/css/select.dataTables.min.css" />
-		<script src="/static/js/dataTables.editor.min.js"></script>
+		<!--<script src="/static/js/dataTables.editor.min.js"></script>-->
 
 <script type='text/javascript'>
 $.extend({
