--- a/web/templates/stock_web.html
+++ b/web/templates/stock_web.html
@@ -12,7 +12,9 @@
 		<div class="col-md-4" id="filter_col{{ index+1 }}" data-column="{{ index }}">
 			{{ stockWeb.column_names[index] }} &nbsp;
 			<!-- Column - {{ stockWeb.column_names[index] }} - {{ element }} -->
-			<input type="text" class="column_filter input-group-sm form-control" id="col{{ index }}_filter">
+			<input type="text" class="column_filter input-group-sm form-control"
+				   {% if element == 'date' %} value="{{ date_now }}" {% end %}
+				   id="col{{ index }}_filter">
 		</div>
 		{% end %}
 	</div>
@@ -68,6 +70,7 @@
 				$(this).val()
 			).draw();
 		});
+		$('input.column_filter').click();//第一次点击执行，读取时间信息。
 
 		$.fn.dataTable.Buttons.defaults.dom.container.className = 'dt-buttons btn-overlap btn-group btn-overlap';
 
