解决 Bokeh 显示问题。

--- a/web/templates/stock_indicators.html
+++ b/web/templates/stock_indicators.html
@@ -11,7 +11,10 @@
 <script type="text/javascript" src="/static/js/bokeh.min.js"></script>
 <script type="text/javascript" src="/static/js/bokeh-widgets.min.js"></script>
 <script type="text/javascript" src="/static/js/bokeh-tables.min.js"></script>
+<script type="text/javascript" src="/static/js/bokeh-api.min.js"></script>
 <script type="text/javascript" src="/static/js/bokeh-gl.min.js"></script>
+
+
 <script type="text/javascript">
     Bokeh.set_log_level("info");
 
