--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -6,6 +6,13 @@
 	<h3 class="header smaller lighter blue">欢迎使用股票系统。</h3>
 
 	<div class="clearfix">
-		<div class="pull-right tableTools-container"></div>
+		<div class="pull-left tableTools-container">
+
+			<h3>2021年6月3日使用 AkShare 做数据抓取服务</h3>
+			<p>1，使用 stock_zh_a_spot 做实时行情数据。</p>
+			<p>2，使用 stock_zh_a_daily 做历史数据统计。</p>
+			<p>3，升级基础镜像使用python3.7，AkShare 的 0.9.65 版本。</p>
+
+		</div>
 	</div>
 {% end %}
