--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -7,7 +7,16 @@
 
 	<div class="clearfix">
 		<div class="pull-left tableTools-container">
+			<h3>2021年8月31日更新job服务</h3>
+			<p>1，过滤包括：600，6006，601，000，001，002，且不包括ST的股票数据。。</p>
+			<p>2，使用 stock_zh_ah_name 做每日数据。</p>
+			<p>3，AkShare 升级到 1.0.80 版本。</p>
 
+		</div>
+	</div>
+
+	<div class="clearfix">
+		<div class="pull-left tableTools-container">
 			<h3>2021年6月3日使用 AkShare 做数据抓取服务</h3>
 			<p>1，使用 stock_zh_a_spot 做实时行情数据。</p>
 			<p>2，使用 stock_zh_a_daily 做历史数据统计。</p>
@@ -15,4 +24,5 @@
 
 		</div>
 	</div>
+
 {% end %}
