--- a/web/templates/stock_indicators.html
+++ b/web/templates/stock_indicators.html
@@ -12,6 +12,8 @@
 <script type="text/javascript" src="/static/js/bokeh-widgets.min.js"></script>
 <script type="text/javascript" src="/static/js/bokeh-tables.min.js"></script>
 <script type="text/javascript" src="/static/js/bokeh-api.min.js"></script>
+<script type="text/javascript" src="/static/js/bokeh-gl.min.js"></script>
+
 
 
 <script type="text/javascript">
