--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -5,6 +5,20 @@
 
 	<h3 class="header smaller lighter blue">欢迎使用股票系统。</h3>
 
+
+	<div class="clearfix">
+		<div class="pull-left tableTools-container">
+			<h3>基础报版本</h3>
+
+			<p>1，pandas使用【 {{ pandasVersion }} 】版本</p>
+			<p>2，numpy使用【 {{ numpyVersion }} 】版本</p>
+			<p>3，akshare使用【 {{ akshareVersion }} 】版本</p>
+			<p>4，bokeh使用【 {{ bokehVersion }} 】版本</p>
+			<p>5，stockstats使用【 {{ stockstatsVersion }} 】版本</p>
+
+		</div>
+	</div>
+
 	<div class="clearfix">
 		<div class="pull-left tableTools-container">
 			<h3>2021年8月31日更新job服务</h3>
