--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -9,13 +9,13 @@
 	<div class="clearfix">
 		<div class="pull-left tableTools-container">
 			<h3>基础报版本</h3>
-
-			<p>1，pandas使用【 {{ pandasVersion }} 】版本</p>
-			<p>2，numpy使用【 {{ numpyVersion }} 】版本</p>
-			<p>3，akshare使用【 {{ akshareVersion }} 】版本</p>
-			<p>4，bokeh使用【 {{ bokehVersion }} 】版本</p>
-			<p>5，stockstats使用【 {{ stockstatsVersion }} 】版本</p>
-
+			<p>1，pandas使用【 {{ pandasVersion }} 】版本， <a href="https://www.pypandas.cn/docs/" target="_blank">中文文档</a> </p>
+			<p>2，numpy使用【 {{ numpyVersion }} 】版本， <a href="https://www.numpy.org.cn/user/" target="_blank">中文文档</a></p>
+			<p>3，akshare使用【 {{ akshareVersion }} 】版本， <a href="https://www.akshare.xyz/" target="_blank">中文文档</a></p>
+			<p>4，bokeh使用【 {{ bokehVersion }} 】版本， <a href="http://docs.bokeh.org/en/latest/" target="_blank">官方文档</a></p>
+			<p>5，stockstats使用【 {{ stockstatsVersion }} 】版本， <a href="https://github.com/jealous/stockstats/" target="_blank">官方文档</a></p>
+			<p>6，TA-Lib使用【 {{ talibVersion }} 】版本， <a href="https://pypi.org/project/TA-Lib/" target="_blank">官方文档</a></p>
+			<p>7，jupyter使用【 {{ jupyterVersion }} 】版本， <a href="https://jupyter-notebook.readthedocs.io/en/latest/" target="_blank">官方文档</a></p>
 		</div>
 	</div>
 
