--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -19,6 +19,16 @@
 		</div>
 	</div>
 
+
+	<div class="clearfix">
+		<div class="pull-left tableTools-container">
+			<h3>2021年9月20日更新，发布2.0版本</h3>
+			<p>1，修复bokeh的版本升级问题，可以显示趋势数据了。</p>
+			<p>2，使用 stock_zh_ah_name 做每日数据。</p>
+			<p>3，AkShare 升级到 1.1.9 版本。</p>
+		</div>
+	</div>
+
 	<div class="clearfix">
 		<div class="pull-left tableTools-container">
 			<h3>2021年8月31日更新job服务</h3>
