发布 2.0 系统，增加系统版本说明。

--- a/web/templates/common/header.html
+++ b/web/templates/common/header.html
@@ -3,7 +3,7 @@
     <div class="navbar-container ace-save-state" id="navbar-container">
         <div class="navbar-header pull-left">
             <a href="/" class="navbar-brand">
-                <small><i class="fa fa-leaf"></i>股票系统</small>
+                <small><i class="fa fa-leaf"></i>开源Python全栈股票系统，数据抓取、统计分析、报表展示 版本：{{ pythonStockVersion }}</small>
             </a>
         </div>
 
