--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -3,7 +3,7 @@
 
 {% block main_content %}
 
-	<h3 class="header smaller lighter blue">欢迎使用股票系统。</h3>
+	<h3 class="header smaller lighter blue">开源Python全栈股票系统，数据抓取、统计分析、报表展示。</h3>
 
 
 	<div class="clearfix">
