--- a/web/templates/layout/main.html
+++ b/web/templates/layout/main.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<meta charset="utf-8" />
-		<title>股票系统</title>
+		<title>股票系统 {{ pythonStockVersion }}</title>
 		{% block meta %}{% end %}
 	</head>
 
