--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -7,7 +7,7 @@
 
 	<div class="clearfix">
 		<div class="pull-left tableTools-container">
-			<h3>基础报版本</h3>
+			<h3>基础库版本</h3>
 			<p>1，pandas使用【 {{ pandasVersion }} 】版本， <a href="https://www.pypandas.cn/docs/" target="_blank">中文文档</a> </p>
 			<p>2，numpy使用【 {{ numpyVersion }} 】版本， <a href="https://www.numpy.org.cn/user/" target="_blank">中文文档</a></p>
 			<p>3，akshare使用【 {{ akshareVersion }} 】版本， <a href="https://www.akshare.xyz/" target="_blank">中文文档</a></p>
@@ -16,6 +16,13 @@
 		</div>
 	</div>
 
+	<div class="clearfix">
+		<div class="pull-left tableTools-container">
+			<h3>相关资料信息</h3>
+			<p>1，github项目地址。<a href="https://github.com/pythonstock/stock" target="_blank">pythonstock</a></p>
+			<p>2，博客地址。<a href="https://blog.csdn.net/freewebsys/category_9285317.html" target="_blank">博客地址</a></p>
+		</div>
+	</div>
 
 	<div class="clearfix">
 		<div class="pull-left tableTools-container">
