--- a/web/templates/new_index.html
+++ b/web/templates/new_index.html
@@ -3,16 +3,130 @@
 
 {% block main_content %}
 
-	<!--h3 class="header smaller lighter blue">开源Python全栈股票系统，数据抓取、统计分析、报表展示。</h3-->
+	<div class="table-header">{{ stockWeb.name }}</div>
 
+	<table cellpadding="3" cellspacing="0" border="0" style="width: 67%; margin: 0 auto 2em auto;">
+		<tbody>
 
-	<div class="clearfix">
-		<div class="pull-left tableTools-container">
-			<h3>相关资料信息</h3>
-			<p>1，github项目地址。<a href="https://github.com/pythonstock/stock" target="_blank">pythonstock</a></p>
-			<p>2，博客地址。<a href="https://blog.csdn.net/freewebsys/category_9285317.html" target="_blank">博客地址</a></p>
+		</tbody>
+	</table>
+	<!-- div.table-responsive -->
+	<!-- div.dataTables_borderWrap -->
+	<div>
+		<div class="pull-right tableTools-container"></div>
+		<table id="dynamic-table" class="table table-striped table-bordered table-hover">
+			<thead>
+				<tr>{% for column_name in stockWeb.column_names %}
+					<th>{{ column_name }}</th>
+				{% end %}
+				</tr>
+			</thead>
+		</table>
+	</div>
+
+	<!-- 定义一个窗口的Div 东方财富股票数据页面 -->
+	<div id="dfcf-window-modal" class="modal fade">
+		<div class="modal-dialog" style="width:1010px;">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+					<h3 class="smaller lighter blue no-margin">东方财富分析</h3>
+				</div>
+				<div class="modal-body" id="dfcf-iframe-body" >
+				</div>
+			</div>
 		</div>
 	</div>
 
+	<!-- 定义一个窗口的Div 指标分析数据页面 -->
+	<div id="indicators-window-modal" class="modal fade">
+		<div class="modal-dialog" style="width:1050px;">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+					<h3 class="smaller lighter blue no-margin">股票数据详细指标分析</h3>
+				</div>
+				<div class="modal-body" id="indicators-window-body" >
 
+				</div>
+			</div>
+		</div>
+	</div>
+
+<!-- inline scripts related to this page -->
+<script type="text/javascript">
+	//每次动态加载 指标分析窗口
+	function showIndicatorsWindow(code) {
+		var baseUrl = '/stock/data/indicators?code='+code; // 没有跨域问题，直接加载
+		$('#indicators-window-body').html( "<h5>数据加载中...请稍候.</h5>" );
+		$('#indicators-window-body').context = $("#indicators-window-body").load(baseUrl);
+		$('#indicators-window-modal').modal('show');
+	}
+
+	//每次动态加载 东方财富窗口
+	function showDFCFWindow(code) {
+
+		var iframe = document.createElement('iframe')
+		// var baseUrl = 'https://emweb.eastmoney.com/PC_HSF10/ShareholderResearch/Index?type=soft&code='+code;
+		var baseUrl = 'https://emweb.eastmoney.com/PC_HSF10/OperationsRequired/Index?type=soft&code='+code;
+		iframe.src = baseUrl;
+		iframe.width = '980px';
+		iframe.height = '700px';
+		iframe.frameborder = '0';
+		$('#dfcf-iframe-body').empty(); // 先清空数据
+		document.getElementById("dfcf-iframe-body").appendChild(iframe)
+		$('#dfcf-window-modal').modal('show');
+	}
+
+	jQuery(function($) {
+
+		$( ".date-picker" ).datepicker({
+			language: 'zh-CN', //设置语言
+            format:"yyyymmdd",
+            showOtherMonths: true,
+            selectOtherMonths: false,
+            autoclose: true,
+			todayHighlight: true,
+			onSelect: function(selected,evnt) {
+				 console.log(selected);
+			}
+        }).on('changeDate', function(ev){
+			$('input.column_filter').click();//触发搜索
+		});
+
+
+		//var nameParam = $.getUrlVar('table_name');
+		var nameParam = 'stock_board_concept_name';
+		console.log(nameParam);
+		var myTable = $('#dynamic-table').DataTable( {
+			"select": true,
+			"bFilter": true,
+			"ordering": true,
+			"order": [0,'desc'],
+			"processing": true,
+			"serverSide": true,
+			//"lengthMenu": [5],
+			"language": {
+                "url": "/static/js/datatables.Chinese.json"
+            },
+			"ajax": "/stock/api_data?name="+nameParam,
+			"columns": [
+				{% for column in stockWeb.columns %}
+					{ "data": "{{ column }}" },
+				{% end %}
+				]
+		} );
+
+		$('input.column_filter').on( 'keyup click', function () {
+			var i =  $(this).parents('div').attr('data-column') ;
+			//console.log(i,"val:",$(this).val());
+			myTable.column(i).search(
+				$(this).val()
+			).draw();
+		});
+
+		$('input.column_filter').click();//第一次点击执行，读取时间信息。
+
+	})
+</script>
 {% end %}
