--- a/web/templates/common/left_menu.html
+++ b/web/templates/common/left_menu.html
@@ -6,7 +6,7 @@
 
     <ul class="nav nav-list">
         <li class="">
-            <a href="/">
+            <a href="/stock/">
                 <i class="menu-icon fa fa-tachometer"></i>
                 <span class="menu-text"> Dashboard </span>
             </a>
